[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-env"
version = "1.0.0"
description = "OpenEnv-compliant production incident response RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openai==1.40.0",
    "faker==26.0.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]